--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&text=ErikMattheis&family=Roboto&display=swap"
-    rel="stylesheet">
   <title>Erik Mattheis</title>
 </head>
 
@@ -35,7 +33,7 @@
             </g>
           </svg>
         </div>
-        <div class="skill">
+        <div class="skill swing">
           <svg fill="#ffffff" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -112,5 +110,6 @@
     </div>
     <script type="module" src="/main.js"></script>
 </body>
+
 
 </html>
