--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
       <p>
         Full stack developer. <br />
       </p>
-      <div class="skills">
-        <div class="skill swing">
+      <div class="topics">
+        <div class="topic swing">
           <svg fill="#ffffff" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img"
             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" enable-background="new 0 0 512 512"
             xml:space="preserve">
@@ -39,7 +39,7 @@
           </svg>
           <p class="svg-title">Vue.js</p>
         </div>
-        <div class="skill swing">
+        <div class="topic swing">
           <svg fill="#ffffff" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -52,7 +52,7 @@
           </svg>
           <p class="svg-title">NodeJS</p>
         </div>
-        <div class="skill swing">
+        <div class="topic swing">
           <svg fill="#ffffff" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -67,8 +67,8 @@
         </div>
       </div>
 
-      <div class="skills">
-        <div class="skill swing">
+      <div class="topics">
+        <div class="topic swing">
           <a href="https://github.com/erikmattheis">
             <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -77,7 +77,7 @@
             </svg>
           </a>
         </div>
-        <div class="skill swing">
+        <div class="topic swing">
           <a href="mailto:erik@mattheis.com">
             <svg viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" fill="#fff">
