--- a/app/index.html
+++ b/app/index.html
@@ -18,20 +18,19 @@
 
   <div class="page">
     <div class="card">
-      <h1 class="black animated dur02 blurred">ERIK MATTHEIS</h1>
-      <p class="animated dur04 blurred left">
-        <em>Full stack developer.</em>
+      <h1 class="header black animated dur02 blurred">ERIK MATTHEIS</h1>
+      <p class="header animated dur04 blurred left">
+        <em>Full stack developer</em>
       </p>
 
-      <div class="topic animated dur08 left">
-        <div class="project">
-          <img src="/images/screenshots/articl.net.jpg" alt="Articl.net screenshot" style="width:10rem" />
-          <p class="svg-title">Articl.net</p>
-        </div>
-      </div>
+      <ul>
+        <li class="button button-js"><a href>JS</a></li>
+        <li class="button button-design"><a href>Design</a></li>
+        <li class="button button-ai"><a href>AI</a></li>
+      </ul>
 
       <div class="topic animated dur08 left">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1800 1800">
+        <svg class="svg" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1800 1800">
           <g id="Layer">
             <g>
               <path fill="#ffffff"
