--- a/app/index.html
+++ b/app/index.html
@@ -18,12 +18,12 @@
 
   <div class="page">
     <div class="card">
-      <h1 class="header black animated dur02 blurred">ERIK MATTHEIS</h1>
+      <h1 class="header black animated dur08 blurred">ERIK MATTHEIS</h1>
       <p class="header animated dur04 blurred left">
         <em>Full stack developer</em>
       </p>
 
-      <ul class="tabs">
+      <ul class="tabs header animated dur06 right">
         <li class="button button-js"><a href>JS</a></li>
         <li class="button button-design"><a href>Design</a></li>
         <li class="button button-ai"><a href>AI</a></li>
@@ -46,28 +46,30 @@
             </g>
           </svg>
           <p class="title">Design</p>
-
         </div>
+
+
         <div class="copy">
-          <p>
-            I'm a full stack developer with a passion for design. I love to build things that are beautiful and
-            functional. I'm a big fan of the JAMstack and I'm always looking for new ways to build better websites.
-          </p>
 
-          <p>Welcome to the intersection of innovation and aesthetics. In the realm of design, I embark on a journey to
-            weave intuitive and visually compelling experiences. Every line of code is a stroke of creativity, and every
-            pixel serves a purpose. Whether it's sculpting user interfaces or architecting user journeys, I believe in
-            the
-            power of design to elevate digital experiences.</p>
+          I love a challenge that results in something beautiful and functional. I understand and speak Jamstack but
+          prefer English.<br><br>
 
-          <p>My approach is a blend of functionality and beauty, where the user is not just an observer but an active
-            participant in the narrative. From wireframes to interactive prototypes, I shape digital landscapes that
-            resonate with both elegance and usability. Join me as we explore the fusion of form and function, where
-            every
-            design decision is a step towards creating seamless and delightful interactions. Let's reimagine the digital
-            canvas together, one pixel at a time.</p>
+          When I strted, a web developer did everything but run the server and I think if we could run a shared
+          hosting account it was a webmaster.<br><br>
+
+          Now, a full stack developer does everything but run the server and I am passable at DevOps so now am a Web
+          Master.<br><br>
+
+          I can play any role including scrum master or product owner but most enjoy being on a small team that takes
+          something from idea to production.<br><br>
+
+          This is a portfilio of recent solo projects. Currently, in Winter 2024, I am looking to join a team or
+          service a new client.
+
         </div>
+
       </div>
+
 
       <div class="topic">
         <div class="graphic">
@@ -80,7 +82,6 @@
             </g>
           </svg>
           <p class="title">NodeJS</p>
-
         </div>
         <div class="copy">
           <p>My passion for design is matched only by my love for technology. I'm a full stack developer with a
@@ -170,6 +171,7 @@
             the JAMstack and I'm always looking for new ways to build better websites.</p>
         </div>
       </div>
+
     </div>
 
     <footer>
