--- a/app/index2.html
+++ b/app/index2.html
@@ -8,396 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <link rel="stylesheet" href="/style.css" />
+
   <title>Erik Mattheis</title>
-  <style>
-    :root {
-      font-family: 'Rubik', 'Arial', serif;
-      font-weight: 400;
-      line-height: 1.5;
-      color-scheme: light dark;
-      font-synthesis: none;
-      text-rendering: optimizeLegibility;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
 
-    .black {
-      font-weight: 900;
-    }
-
-    body {
-      color: rgba(255, 255, 255);
-      background-color: #000;
-      min-width: 320px;
-      min-height: 100vh;
-      background-image: linear-gradient(to top, #000000, transparent);
-    }
-
-    .modal-loader {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      position: absolute;
-      z-index: 31;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0);
-      transition: all 0.8s ease-in-out;
-      margin-top: 2rem;
-      padding: 2rem;
-    }
-
-    .image {
-      width: 100%;
-    }
-
-    .page {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .card {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 320px;
-      margin-top: 2rem;
-      padding: 2rem;
-      border-radius: 0;
-      background: linear-gradient(180deg, #000000ff, #00000033, transparent) no-repeat;
-    }
-
-    h1 {
-      font-weight: 700;
-      font-size: 2.2rem;
-      letter-spacing: 0.09rem;
-      line-height: 1.1;
-      margin-top: 1rem 0;
-    }
-
-    .graphic {
-      width: 6rem;
-      margin: 3rem 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      position: relative;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .graphic:hover,
-    .graphic:active {
-      opacity: 1;
-      cursor: pointer;
-    }
-
-    .title {
-      transition: all 0.3s ease-in-out;
-      text-align: center;
-    }
-
-    .graphic:hover .title,
-    .graphic:active .title {
-      transform: scale(1.2)
-    }
-
-    .message {
-      margin-top: 2em;
-      font-size: 1.2em;
-    }
-
-    footer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-top: 2rem;
-      font-size: 1.2rem;
-    }
-
-    .animated {
-      transition-property: all;
-      transition-timing-function: ease-in-out;
-    }
-
-    .dur02 {
-      transition-duration: 0.2s;
-    }
-
-    .dur04 {
-      transition-duration: 0.4s;
-    }
-
-    .dur06 {
-      transition-duration: 0.6s;
-    }
-
-    .dur08 {
-      transition-duration: 0.8s;
-    }
-
-    .blurred {
-      filter: blur(60px);
-      opacity: 0.8;
-    }
-
-    .left {
-      transform: translateX(-4rem);
-    }
-
-    .right {
-      transform: translateX(4rem);
-    }
-
-    .transparent {
-      opacity: 0;
-    }
-
-    /* tabs */
-
-    ul.tabs {
-      display: flex;
-      flex-direction: row;
-      list-style: none;
-      padding: 0;
-    }
-
-    ul.tabs li {
-      margin: 0 0.5rem;
-    }
-
-    .button a {
-      text-decoration: none;
-      position: relative;
-      padding: 10px;
-      display: inline-block;
-    }
-
-    .button a::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-      width: 0;
-      height: 2px;
-      background: #000;
-      transition: all 0.3s ease-in-out;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      .button a::after {
-        background: #fff;
-        /* color for dark theme */
-      }
-    }
-
-    .active.button a::after,
-    .button a:hover::after {
-      width: 100%;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    .subject {
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 1s ease-out, visibility 1s ease-out;
-    }
-
-    .subject.subject-active {
-      opacity: 1;
-      visibility: visible;
-    }
-
-    .topics {
-      display: block;
-      justify-content: center;
-      margin-bottom: 4rem;
-    }
-
-    .topic {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      margin: 2rem 0;
-      padding: 2rem;
-      width: 320px;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .fade {
-      transition: opacity 1s ease-out, visibility 1s ease-out;
-      opacity: 0;
-      visibility: hidden;
-    }
-  </style>
-
-  <script>
-    let loaderTimeout;
-
-    function removeLoading() {
-      const loader = document.getElementsByClassName("loader-container");
-      if (loader[0]) {
-        loader[0].remove();
-      }
-    }
-
-    function hideLoading() {
-      clearTimeout(loaderTimeout);
-
-      const loader = document.getElementsByClassName("loader-container");
-
-      if (loader[0]) {
-        loader[0].classList.add("transparent");
-      }
-
-      document.removeEventListener("mousemove", hideLoading);
-      document.removeEventListener("touchstart", hideLoading);
-
-      animateContent();
-
-      setTimeout(removeLoading, 1000);
-    }
-
-    function animateLoader() {
-      const allElements = document.getElementsByClassName("loader");
-      for (let i = 0; i < allElements.length; i++) {
-        allElements[i].classList.remove("left", "right", "blurred");
-      }
-    }
-
-    function animateContent() {
-
-      const allElements = document.getElementsByClassName("header");
-      for (let i = 0; i < allElements.length; i++) {
-        allElements[i].classList.remove("left", "right", "blurred");
-      }
-    }
-    function handleClick(event, subjectId) {
-      console.log("handleClick", subjectId);
-      event.preventDefault();
-
-
-      const currentActiveButton = document.querySelector(".button.active");
-      currentActiveButton.classList.remove("active");
-
-      const newActiveButton = document.getElementById("button-" + subjectId);
-      newActiveButton.classList.add("active");
-
-      const currentActiveSubject = document.querySelector(".subject-active");
-      currentActiveSubject.classList.remove("subject-active");
-
-      const newActiveSubject = document.getElementById(subjectId);
-      newActiveSubject.classList.add("subject-active");
-    }
-
-
-    function attachListeners() {
-
-      const buttonAi = document.getElementById("button-ai");
-      const buttonJs = document.getElementById("button-js");
-      const buttonDesign = document.getElementById("button-design");
-
-      buttonAi.addEventListener("click", function (event) {
-        handleClick(event, "ai");
-      });
-
-      buttonJs.addEventListener("click", function (event) {
-        handleClick(event, "js");
-      });
-
-      buttonDesign.addEventListener("click", function (event) {
-        handleClick(event, "design");
-      });
-    }
-
-    window.onload = function () {
-      attachListeners();
-      animateContent();
-    };
-
-    window.addEventListener("scroll", function () {
-      const topics = document.querySelectorAll(".topic .graphic");
-
-      const noElement = {
-        getPropertyValue: function () {
-          return 0;
-        },
-      };
-
-      const contentPadding = 16;
-
-      const animationHeight = window.innerHeight * 0.2;
-
-      topics.forEach(function (topic) {
-        const rect = topic.getBoundingClientRect();
-
-        const distanceFromTop = rect.bottom - contentPadding;
-        const distanceFromBottom = window.innerHeight - rect.top;
-
-        if (distanceFromTop > 0 && distanceFromTop < animationHeight) {
-          const translateX = distanceFromTop - animationHeight;
-
-          topic.style.transform = "translateX(" + translateX + "px)";
-          topic.style.opacity = distanceFromTop / animationHeight;
-        } else if (distanceFromBottom > 0 && distanceFromBottom < animationHeight) {
-          const translateX = animationHeight - distanceFromBottom;
-
-          topic.style.transform = "translateX(" + translateX + "px)";
-          topic.style.opacity = distanceFromBottom / animationHeight;
-        }
-      });
-
-      const copies = document.querySelectorAll(".copy");
-
-      copies.forEach(function (copy) {
-        let copyStyle;
-
-        if (copy) {
-          copyStyle = window.getComputedStyle(copy);
-        } else {
-          copyStyle = noElement;
-        }
-
-        const rect2 = copy.getBoundingClientRect();
-
-        const distanceFromTop2 = rect2.bottom - contentPadding;
-        const distanceFromBottom2 = window.innerHeight - rect2.top;
-
-        if (distanceFromTop2 > 0 && distanceFromTop2 < animationHeight) {
-          const translateX = distanceFromTop2 - animationHeight;
-
-          copy.style.transform = "translateX(" + translateX + "px)";
-          copy.style.opacity = distanceFromTop2 / animationHeight;
-        } else if (
-          distanceFromBottom2 > 0 &&
-          distanceFromBottom2 < animationHeight
-        ) {
-          const translateX = animationHeight - distanceFromBottom2;
-
-          copy.style.transform = "translateX(" + translateX + "px)";
-          copy.style.opacity = distanceFromBottom2 / animationHeight;
-          return;
-        }
-      });
-    });
-
-  </script>
 </head>
 
 <body>
@@ -409,13 +23,13 @@
         <em>Full stack developer</em>
       </p>
 
-      <ul class="tabs header animated dur06 right">
-        <li id="button-js" class="button button-js"><a href>JS</a></li>
-        <li id="button-design" class="button button-design active"><a href>Design</a></li>
+      <ul class="tabs header animated dur06 blurred">
+        <li id="button-js" class="button button-js active"><a href>JS</a></li>
+        <li id="button-design" class="button button-design"><a href>Design</a></li>
         <li id="button-ai" class="button button-ai"><a href>AI</a></li>
       </ul>
 
-      <div id="js" class="subject js subject-active">
+      <div id="js" class="subject js subject-active header animated dur08 blurred">
         <!-- JS content goes here -->
         js
       </div>
@@ -432,16 +46,16 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="header animated dur06 blurred">
     <p>Let's build something great togther.</p>
     <a href="mailto:erik@mattheis.org">erik@mattheis.org</a>
     Saint Paul, MN
   </footer>
   </div>
-  <!--
+
   <script type="module" src="/main.js">
   </script>
--->
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEP8V7LPC9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
