--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/fonts.css" />
 
   <title>Erik Mattheis</title>
 
@@ -82,7 +83,6 @@
           </div>
           -->
       </div>
-
 
       <div id="js" class="subject">
         <div class="topic">
