--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         <li id="button-ai" class="button button-ai"><a href>AI</a></li>
       </ul>
 
-      <div id="design" class="subject design subject-active header animated dur08 blurred">
+      <div id="design" class="visible subject design subject-active header animated dur08 blurred">
         <div class="topic">
           <div class="graphic">
             <svg class="image" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1800 1800">
@@ -90,7 +90,7 @@
           -->
       </div>
 
-      <div id="js" class="subject js">
+      <div id="js" class="hidden subject js">
         <div class="topic">
           <div class="graphic">
             <svg class="image" viewBox="2 1 28 31" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -188,21 +188,11 @@
 
             </ul>
             </li>
-
-
-
-
-
-            </ul>
-            </li>
           </div>
         </div>
-
-
-
       </div>
 
-      <div id="ai" class="subject ai">
+      <div id="ai" class="hidden subject ai">
         <div class="topic">
           <div class="graphic">
             <svg class="image" viewBox="0 0 24 24" version="1.1" rxmlns="http://www.w3.org/2000/svg">
