--- a/app/index.html
+++ b/app/index.html
@@ -26,11 +26,10 @@
       <p class="header animated dur04 blurred left">
         <em>Full stack developer</em>
       </p>
-
       <ul class="tabs header animated dur06 blurred">
-        <li id="button-design" class="button button-design active"><a href>Design</a></li>
-        <li id="button-js" class="button button-js"><a href>JS</a></li>
-        <li id="button-ai" class="button button-ai"><a href>AI</a></li>
+        <li id="button-design" class="button button-design active"><a href>Approach</a></li>
+        <li id="button-js" class="button button-js"><a href>Tools</a></li>
+        <li id="button-ai" class="button button-ai"><a href>Work</a></li>
       </ul>
       <div class="subject-wrapper">
         <div id="design" class="z1 subject design subject-active header animated dur08 blurred">
@@ -42,7 +41,7 @@
                   d="M20.97 7.27a.996.996 0 000-1.41l-2.83-2.83a.996.996 0 00-1.41 0l-4.49 4.49-3.89-3.89c-.78-.78-2.05-.78-2.83 0l-1.9 1.9c-.78.78-.78 2.05 0 2.83l3.89 3.89L3 16.76V21h4.24l4.52-4.52 3.89 3.89c.95.95 2.23.6 2.83 0l1.9-1.9c.78-.78.78-2.05 0-2.83l-3.89-3.89 4.48-4.48zM5.04 6.94l1.89-1.9L8.2 6.31 7.02 7.5l1.41 1.41 1.19-1.19 1.2 1.2-1.9 1.9-3.88-3.88zm11.23 7.44l-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27-1.9 1.9-3.89-3.89 1.9-1.9 1.21 1.21zM6.41 19H5v-1.41l9.61-9.61 1.3 1.3.11.11L6.41 19zm9.61-12.44l1.41-1.41 1.41 1.41-1.41 1.41-1.41-1.41z">
                 </path>
               </svg>
-              <p class="title">Approach</p>
+              <h2 class="title">Approach</h2>
             </div>
 
             <div class="copy">
@@ -108,16 +107,11 @@
                   d="M307.88 318.05c-37.29 0-45.24-10.42-47.6-27.24a8.43 8.43 0 00-8.22-7.32h-19.8a8.44 8.44 0 00-8.26 8.58c0 14.58 5.12 62.17 83.92 62.17 24.38 0 44.66-5.7 58.63-16.49S388 311.26 388 292.55c0-37.55-24.5-47.83-72.75-54.55-49.05-6.82-49.05-10.29-49.05-17.89 0-5.47 0-18.28 35.46-18.28 25.23 0 38.74 3.19 43.06 20a8.35 8.35 0 008.06 6.67h19.87a8.24 8.24 0 006.16-2.86 8.91 8.91 0 002.12-6.44c-2.57-35.55-28.56-53.58-79.24-53.58-46.06 0-73.55 20.75-73.55 55.5 0 38.1 28.49 48.87 71.29 53.33 50 5.17 50 12.71 50 19.37.03 10.38-4.28 24.23-41.55 24.23z">
                 </path>
               </svg>
-              <p class="title">NodeJS</p>
+              <h2 class="title">Tools</h2>
             </div>
             <div class="copy">
-              <p>Since the time of "webmasters" I've always done some solo projects start to finish. I learned Node at
-                the
-                same time as AngularJS so was full stack before the term was around. I can do
-                devops with AWS, Heroku, Netlify and Google Cloud Services. A full stack developer who does
-                their own devops is still a webmaster.</p>
-
-              <p>I learn functional use of new tools quickly and regularly use:</p>
+              <p>I excel in leveraging the power of Artificial Intelligence through various APIs, employing cutting-edge
+                technologies to enhance projects. My expertise includes:</p>
 
               <ul>
                 <li>Frontend
@@ -127,39 +121,56 @@
                     <li>Vuex/Pinia</li>
                     <li>Tailwind</li>
                     <li>BootstrapVue</li>
-                    <li>Classless CSS libraries (PicoCSS, Simple)</li>
+                    <li>Classless CSS (PicoCSS, Simple)</li>
                   </ul>
                 </li>
-                <li>Node on backend<ul>
+                <li>Backend
+                  <ul>
+                    <li>Node</li>
+                    <li>Nuxt</li>
                     <li>Express</li>
-                    <li>Prisma</li>
-                    <li>Redis</li>
                     <li>GraphQL</li>
-                  </ul>
-                </li>
-                <li>Data <ul>
                     <li>NoSQL</li>
                     <li>SQL</li>
-                    <li>Firebase</li>
+                    <li>Atlas</li>
+                    <li>PHP/MySQL/Apache</li>
+                    <li>Wordpress</li>
                   </ul>
                 </li>
-                <ul>AI
+                <li>APIs<ul>
+                    <li>REST</li>
+                    <li>Firebase</li>
+                    <li>Print-on-demand</li>
+                    <li>Stripe</li>
+                    <li>Google things</li>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li>Twilio</li>
+                    <li>SendGrid</li>
+                    <li>MailChimp</li>
+                    <li>Shopify</li>
+                    <li>WooCommerce</li>
+                  </ul>
+                </li>
+                <li>AI
                   <ul>
-                    <li>All OpenAI APIs</li>
+                    <li>OpenAI APIs</li>
                     <li>Google Bard API</li>
-                    <li>Google Cloud Vision</li>
                     <li>Tesseract Computer Vision</li>
                   </ul>
-                </ul>
-                <li>DevOps<ul>
+                </li>
+                <li>DevOps
+                  <ul>
                     <li>Netlify</li>
                     <li>AWS</li>
                     <li>Heroku</li>
                     <li>Google Cloud</li>
                   </ul>
                 </li>
-                <li>Serverless functions<ul>
-                    <li>They are all the same</li>
+                <li>Serverless functions
+                  <ul>
+                    <li>All the same!</li>
                   </ul>
                 </li>
                 <li>Testing<ul>
@@ -193,9 +204,7 @@
                     <li>Stripe</li>
                   </ul>
                 </li>
-
               </ul>
-              </li>
             </div>
           </div>
         </div>
@@ -218,17 +227,30 @@
                 4.5 0 017.375-3.453l-.142.08-4.778 2.758a.795.795 0 00-.393.681zm1.097-2.365l2.602-1.5 2.607
                 1.5v2.999l-2.597 1.5-2.607-1.5z"></path>
               </svg>
-              <p class="title">AI</p>
+              <h2 class="title">Work</h2>
             </div>
-            <div class="copy">
-              <p>AI wrote all the text but this. I'm pretty busy but looking for a new client or two.</p>
 
-              <p>My passion for design is matched only by my love for technology. I'm a full stack developer with a
-                background in design and a passion for building things that are beautiful and functional. I'm a big
-                fan
-                of
-                the JAMstack and I'm always looking for new ways to build better websites.</p>
-            </div>
+
+
+
+            <ul>
+              <li>Generative AI
+                <ul>
+                  <li>OpenAI APIs</li>
+                  <li>Google Bard API</li>
+                </ul>
+              </li>
+              <li>Text and Object Recognition
+                <ul>
+                  <li>Tesseract Computer Vision</li>
+                </ul>
+              </li>
+              <li>Model Training
+                <ul>
+                  <li>Utilizing APIs for fine-tuning models</li>
+                </ul>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
