--- a/app/index.html
+++ b/app/index.html
@@ -27,12 +27,12 @@
         <em>Full stack developer</em>
       </p>
       <ul class="tabs header animated dur06 blurred">
-        <li id="button-design" class="button button-design active"><a href>Approach</a></li>
-        <li id="button-js" class="button button-js"><a href>Tools</a></li>
-        <li id="button-ai" class="button button-ai"><a href>Work</a></li>
+        <li id="button-approach" class="button button-approach active"><a href>Approach</a></li>
+        <li id="button-tools" class="button button-tools"><a href>Tools</a></li>
+        <li id="button-work" class="button button-work"><a href>Work</a></li>
       </ul>
       <div class="subject-wrapper">
-        <div id="design" class="z1 subject design subject-active header animated dur08 blurred">
+        <div id="approach" class="z1 subject approach subject-active header animated dur08 blurred">
           <div class="topic">
             <div class="graphic">
               <svg class="image" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04" fill="#DDE6E8">
@@ -86,14 +86,14 @@
             <p class="title">Articl.net</p>
           </div>
           <div class="copy">
-            <p>My passion for design is matched only by my love for technology. I'm a full stack developer with a
-              background in design and a passion for building things that are beautiful and functional. I'm a big fan of
+            <p>My passion for approach is matched only by my love for technology. I'm a full stack developer with a
+              background in approach and a passion for building things that are beautiful and functional. I'm a big fan of
               the JAMstack and I'm always looking for new ways to build better websites.</p>
           </div>
           -->
         </div>
 
-        <div id="js" class="z2 subject js">
+        <div id="tools" class="z2 subject tools">
           <div class="topic">
             <div class="graphic">
               <svg class="image" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
@@ -206,7 +206,7 @@
           </div>
         </div>
 
-        <div id="ai" class="z3 subject ai">
+        <div id="work" class="z3 subject work">
           <div class="topic">
             <div class="graphic">
               <svg class="image" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
@@ -226,10 +226,6 @@
               </svg>
               <h2 class="title">Work</h2>
             </div>
-
-
-
-
             <ul>
               <li>Generative AI
                 <ul>
@@ -250,6 +246,8 @@
             </ul>
           </div>
         </div>
+
+
       </div>
     </div>
   </div>
@@ -261,7 +259,7 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    gtag('approach', new Date());
     gtag('config', 'G-ZEP8V7LPC9');
   </script>
 
