--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         <li id="button-work" class="button button-work"><a href>Work</a></li>
       </ul>
       <div class="subject-wrapper">
-        <div id="approach" class="z1 subject approach subject-active header animated dur08 blurred">
+        <div id="approach" class="z1 subject approach">
           <div class="topic">
             <div class="graphic">
               <svg class="image" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04" fill="#DDE6E8">
@@ -44,14 +44,12 @@
             </div>
 
             <div class="copy">
-              <p>The challenge into something beautiful and functional excites me.</p>
+              <p>Turning a challenge into something beautiful and functional excites me.</p>
 
-              <p></p>
+              <p>In the 90s, a web developer handled everything except running the server. If we could manage
+                shared hosting, we were deemed webmasters.</p>
 
-              <p>Back when I started, a web developer handled everything except running the server. If we could manage a
-                shared hosting account, we were deemed webmasters.</p>
-
-              <p>In the present, a full-stack developer oversees all aspects except server management. I've acquired
+              <p>Now still, a full-stack developer oversees all aspects except server management. I've acquired
                 proficiency in DevOps, making me a contemporary Web Master.</p>
 
               <p>My journey has seen me play diverse roles, including that of a Scrum Master. However, my true passion
@@ -107,98 +105,66 @@
               <h2 class="title">Tools</h2>
             </div>
             <div class="copy">
-              <p>I excel in leveraging the power of Artificial Intelligence through various APIs, employing cutting-edge
-                technologies to enhance projects. My expertise includes:</p>
+              <p>Let's leverage the power of Artificial Intelligence and employ cutting-edge
+                technologies and tools to enhance and simplify projects. In these projects I use:</p>
 
               <ul>
                 <li>Frontend
                   <ul>
-                    <li>Vanilla</li>
+                    <li>ES2021</li>
                     <li>Vue</li>
-                    <li>Vuex/Pinia</li>
-                    <li>Tailwind</li>
-                    <li>BootstrapVue</li>
-                    <li>Classless CSS (PicoCSS, Simple)</li>
+                    <li>BootstrapJS, BootstrapVue</li>
+                    <li>HTML5, CSS3</li>
+                    <li class="dim">jQuery</li>
+                    <li class="dim">AngularJS</li>
                   </ul>
                 </li>
                 <li>Backend
                   <ul>
                     <li>Node</li>
-                    <li>Nuxt</li>
-                    <li>Express</li>
-                    <li>GraphQL</li>
                     <li>NoSQL</li>
+                    <li>Nuxt</li>
                     <li>SQL</li>
-                    <li>Atlas</li>
-                    <li>PHP/MySQL/Apache</li>
-                    <li>Wordpress</li>
+                    <li class="dim">PHP/MySQL/Apache</li>
+                    <li class="dim">Wordpress</li>
                   </ul>
                 </li>
-                <li>APIs<ul>
-                    <li>REST</li>
+                <li>APIs
+                  <ul>
                     <li>Firebase</li>
-                    <li>Print-on-demand</li>
-                    <li>Stripe</li>
-                    <li>Google things</li>
+                    <li>Google Ads</li>
                     <li>Facebook</li>
-                    <li>Twitter</li>
-                    <li>Instagram</li>
-                    <li>Twilio</li>
-                    <li>SendGrid</li>
                     <li>MailChimp</li>
+                    <li>Print-on-demand</li>
+                    <li>REST</li>
                     <li>Shopify</li>
-                    <li>WooCommerce</li>
+                    <li>Twitter</li>
                   </ul>
                 </li>
                 <li>AI
                   <ul>
-                    <li>OpenAI APIs</li>
+                    <li>OpenAI GPT</li>
+                    <li>OpenAI Dall-e</li>
                     <li>Google Bard API</li>
-                    <li>Tesseract Computer Vision</li>
+                    <li>Tesseract</li>
                   </ul>
                 </li>
                 <li>DevOps
                   <ul>
-                    <li>Netlify</li>
-                    <li>AWS</li>
                     <li>Heroku</li>
+                    <li>Netlify</li>
                     <li>Google Cloud</li>
-                  </ul>
-                </li>
-                <li>Serverless functions
-                  <ul>
-                    <li>All the same!</li>
-                  </ul>
-                </li>
-                <li>Testing<ul>
-                    <li>Jest</li>
-                    <li>Vue Test Utils</li>
+                    <li>AWS</li>
                   </ul>
                 </li>
                 <li>Software<ul>
                     <li>Photoshop/Illustrator</li>
-                    <li>Sketch</li>
                     <li>VS Code</li>
                     <li>Git</li>
-                    <li>Atlassian</li>
                     <li>Terminal</li>
+                    <li>Compass</li>
                     <li>Postman</li>
                     <li>Chrome Dev Tools</li>
-                    <li>Chrome Lighthouse</li>
-                    <li>Google Analytics</li>
-                    <li>Google Tag Manager</li>
-                    <li>Google Search Console</li>
-                  </ul>
-                </li>
-                <li>Ecommerce<ul>
-                    <li>Shopify/Liquid</li>
-                    <li>Google Ads</li>
-                    <li>Facebook Ads</li>
-                    <li>Google Merchant Center</li>
-                    <li>Google Tag Manager</li>
-                    <li>Facebook Catalog</li>
-                    <li>On-demand printing and fulfillment APIs</li>
-                    <li>Stripe</li>
                   </ul>
                 </li>
               </ul>
