--- a/app/index.html
+++ b/app/index.html
@@ -77,18 +77,6 @@
             </div>
 
           </div>
-          <!--
-        <div class="topic">
-          <div class="graphic">
-            <img class="image" src="/images/screenshots/articl.net.jpg" alt="Articl.net" />
-            <p class="title">Articl.net</p>
-          </div>
-          <div class="copy">
-            <p>My passion for approach is matched only by my love for technology. I'm a full stack developer with a
-              background in approach and a passion for building things that are beautiful and functional. I'm a big fan of
-              the JAMstack and I'm always looking for new ways to build better websites.</p>
-          </div>
-          -->
         </div>
 
         <div id="tools" class="z2 subject tools">
@@ -192,28 +180,29 @@
               </svg>
               <h2 class="title">Work</h2>
             </div>
-            <ul>
-              <li>Generative AI
-                <ul>
-                  <li>OpenAI APIs</li>
-                  <li>Google Bard API</li>
-                </ul>
-              </li>
-              <li>Text and Object Recognition
-                <ul>
-                  <li>Tesseract Computer Vision</li>
-                </ul>
-              </li>
-              <li>Model Training
-                <ul>
-                  <li>Utilizing APIs for fine-tuning models</li>
-                </ul>
-              </li>
-            </ul>
+            <div class="topic">
+              <div class="section graphic">
+                <a href="https://articl.net/">
+                  <img class="image"
+                    src="https://storage.cloud.google.com/mattheis-images/images/screenshots/articl.net.jpg"
+                    alt="Articl.net" />
+                  <p class="title">Articl.net</p>
+                </a>
+              </div>
+              <div class="copy">
+                <p>A directory of radiological research and educational resources.</p>
+
+                <p>Orignizlly a WordPress blog, I became involved to turn it into an <a class="text-link"
+                    href="https://articl.net/">AngularJS app</a> running off the
+                  WordPress REST API. In late Winter 2024 we are adding features and migrated it to Vue and Nuxt with
+                  a custome API in Node/Express/MongoDB. Here are the repos: <a class="text-link"
+                    href="https://github.com/erikmattheis/articl-2023-vue">frontend</a> / <a class="text-link"
+                    href="https://github.com/erikmattheis/articl-2023-node">backend</a>, <a class="text-link"
+                    href="mailto:erik@mattheis.org">email me</a> for the dev site link.</p>
+              </div>
+            </div>
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
