--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,9 @@
 
             <div class="topic">
               <div class="graphic">
-                <svg class="image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                  xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1" fill="#DDE6E8">
+                <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1"
+                  viewBox="0 0 706.1 706.1" fill="#DDE6E8">
                   <g>
                     <path
                       d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
@@ -82,7 +83,7 @@
         <div id="tools" class="z2 subject tools">
           <div class="topic">
             <div class="graphic">
-              <svg class="image" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
+              <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
                 <path
                   d="M429.76 130.07L274.33 36.85a37 37 0 00-36.65 0L82.24 130.06A38.2 38.2 0 0064 162.83V349a38.26 38.26 0 0018.24 32.8L123 406.14l.23.13c20.58 10.53 28.46 10.53 37.59 10.53 32.14 0 52.11-20.8 52.11-54.29V182a8.51 8.51 0 00-8.42-8.58h-22.38a8.51 8.51 0 00-8.42 8.58v180.51a15 15 0 01-6.85 13.07c-5.9 3.6-14.47 2.84-24.14-2.15l-39.06-23.51a1.1 1.1 0 01-.48-.92V165.46a1.32 1.32 0 01.59-1.06l151.84-93a.82.82 0 01.73 0l151.93 93a1.34 1.34 0 01.55 1.1V349a1.28 1.28 0 01-.45 1l-152.06 90.65a1.22 1.22 0 01-.8 0l-38.83-23.06a7.8 7.8 0 00-7.83-.41l-.34.2c-10.72 6.35-13.6 8-23.54 11.62-1.62.59-5.43 2-5.76 5.77s3.29 6.45 6.51 8.32l51.9 31.87a35.67 35.67 0 0018.3 5.07h.58a35.87 35.87 0 0017.83-5.07l155.43-93.13A38.37 38.37 0 00448 349V162.83a38.21 38.21 0 00-18.24-32.76z">
                 </path>
@@ -163,7 +164,7 @@
         <div id="work" class="z3 subject work">
           <div class="topic">
             <div class="graphic">
-              <svg class="image" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
+              <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
                 <path d=" M22.282 9.821a5.985 5.985 0 00-.516-4.91 6.046 6.046 0 00-6.51-2.9A6.065 6.065
                 0 004.981 4.18a5.985 5.985 0 00-3.998 2.9 6.046 6.046 0 00.743 7.097 5.98 5.98 0 00.51 4.911 6.051 6.051
                 0 006.515 2.9A5.985 5.985 0 0013.26 24a6.056 6.056 0 005.772-4.206 5.99 5.99 0 003.997-2.9 6.056 6.056 0
