Styling, text edits

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#300031">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#fccafc">
+  <meta name="theme-color" content="#fccafc">
 
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/fonts.css" />
@@ -191,15 +191,24 @@
                 </a>
               </div>
               <div class="copy">
-                <p>A directory of radiological research and educational resources.</p>
+                <p>A repository of radiological research and educational materials with a custom CMS and document
+                  scraper.</p>
 
-                <p>Orignizlly a WordPress blog, I became involved to turn it into an <a class="text-link"
-                    href="https://articl.net/">AngularJS app</a> running off the
-                  WordPress REST API. In late Winter 2024 we are adding features and migrated it to Vue and Nuxt with
-                  a custome API in Node/Express/MongoDB. Here are the repos: <a class="text-link"
-                    href="https://github.com/erikmattheis/articl-2023-vue">frontend</a> / <a class="text-link"
-                    href="https://github.com/erikmattheis/articl-2023-node">backend</a>, <a class="text-link"
-                    href="mailto:erik@mattheis.org">email me</a> for the dev site link.</p>
+                AngularJS application
+                You can find the respective repositories for the frontend and backend, a
+
+                <p>Originally a WordPress blog, I took on the project to transform it into an <a class="text-link"
+                    href="https://articl.net/">AngularJS application</a> leveraging the WordPress REST API. In the later
+                  months
+                  of Winter 2024, we are incorporating additional features and transitioned it to Vue and Nuxt,
+                  supported by
+                  a custom API implemented in Node/Express/MongoDB. You can find the respective repositories for the
+                  <a class="text-link" href="https://github.com/erikmattheis/articl-2023-vue">frontend</a> / <a
+                    class="text-link" href="https://github.com/erikmattheis/articl-2023-node">backend</a>, mail me</a>
+                  and for
+                  access to the development site link, please contact me <a class="text-link"
+                    href="mailto:erik@mattheis.org">via email</a>.
+                </p>
               </div>
             </div>
           </div>
