--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
                     <li>Vue</li>
                     <li>BootstrapJS, BootstrapVue</li>
                     <li>HTML5, CSS3</li>
+                    <li>Liquid</li>
                     <li class="dim">jQuery</li>
                     <li class="dim">AngularJS</li>
                   </ul>
@@ -121,13 +122,25 @@
                 <li>APIs
                   <ul>
                     <li>Firebase</li>
-                    <li>Google Ads</li>
+                    <li>Atlas</li>
+                    <li>OpenAI API</li>
+                    <li>Google Identity Services</li>
+                    <li>Google Ads API</li>
+                    <li>YouTube API</li>
+                    <li>Google Maps API</li>
+                    <li>Google Analytics API</li>
+                    <li>Google Books API</li>
+                    <li>Google Calendar API</li>
+                    <li>Google Drive API</li>
+                    <li>Google Sheets API</li>
                     <li>Facebook</li>
                     <li>MailChimp</li>
                     <li>Print-on-demand</li>
                     <li>REST</li>
-                    <li>Shopify</li>
-                    <li>Twitter</li>
+                    <li>Shopify Admin API</li>
+                    <li>Winston</li>
+                    <li>Passport</li>
+                    <li>Twitter API (X API v2)</li>
                   </ul>
                 </li>
                 <li>AI
