--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,19 @@
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/fonts.css" />
 
+  <style>
+    .blurred {
+      filter: blur(60px);
+    }
+  </style>
+
   <title>Erik Mattheis | Saint Paul, MN | Web Developer</title>
 </head>
 
 <body>
   <div class="page">
     <div class="card">
-      <h1 class="header animated dur08 blurred">ERIK MATTHEIS</h1>
+      <h1 class="header animated dur04 blurred">ERIK MATTHEIS</h1>
       <p class="header animated dur04 blurred left">
         <em>Full stack developer</em>
       </p>
@@ -35,12 +41,13 @@
         <div id="approach" class="z1 subject approach">
           <div class="topic">
             <div class="graphic">
-              <svg class="image" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04" fill="#DDE6E8">
+              <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
+                fill="#DDE6E8">
                 <path
                   d="M20.97 7.27a.996.996 0 000-1.41l-2.83-2.83a.996.996 0 00-1.41 0l-4.49 4.49-3.89-3.89c-.78-.78-2.05-.78-2.83 0l-1.9 1.9c-.78.78-.78 2.05 0 2.83l3.89 3.89L3 16.76V21h4.24l4.52-4.52 3.89 3.89c.95.95 2.23.6 2.83 0l1.9-1.9c.78-.78.78-2.05 0-2.83l-3.89-3.89 4.48-4.48zM5.04 6.94l1.89-1.9L8.2 6.31 7.02 7.5l1.41 1.41 1.19-1.19 1.2 1.2-1.9 1.9-3.88-3.88zm11.23 7.44l-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27-1.9 1.9-3.89-3.89 1.9-1.9 1.21 1.21zM6.41 19H5v-1.41l9.61-9.61 1.3 1.3.11.11L6.41 19zm9.61-12.44l1.41-1.41 1.41 1.41-1.41 1.41-1.41-1.41z">
                 </path>
               </svg>
-              <h2 class="title">Approach</h2>
+              <h2 class="title header animated blurred dur08">Approach</h2>
             </div>
 
             <div class="copy">
