Add portfolio site

--- a/app/index.html
+++ b/app/index.html
@@ -214,9 +214,6 @@
                 <p>A repository of radiological research and educational materials with a custom CMS and document
                   scraper.</p>
 
-                AngularJS application
-                You can find the respective repositories for the frontend and backend, a
-
                 <p>Originally a WordPress blog, I took on the project to transform it into an <a class="text-link"
                     href="https://articl.net/">AngularJS application</a> leveraging the WordPress REST API. In the later
                   months
@@ -230,6 +227,39 @@
                     href="mailto:erik@mattheis.org">via email</a>.
                 </p>
               </div>
+            </div>
+            <div class="small graphic">
+              <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
+                fill="#DDE6E8">
+                <g>
+                  <path
+                    d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
+                </g>
+              </svg>
+            </div>
+            <div class="topic">
+              <div class="section graphic">
+                <a href="https://thenightly.com/">
+                  <img class="image"
+                    src="https://storage.cloud.google.com/mattheis-images/images/screenshots/naturally-hued.jpg"
+                    alt="Naturally Hued" />
+                  <p class="title">Naturally Hued</p>
+                </a>
+              </div>
+              <div class="copy">
+                <p>A self-assigned project I used to hone my AI and design skills. I made AI do it.</p>
+              </div>
+            </div>
+            <div class="small graphic">
+              <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
+                fill="#DDE6E8">
+                <g>
+                  <path
+                    d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
+                </g>
+              </svg>
             </div>
           </div>
         </div>
