--- a/app/index.html
+++ b/app/index.html
@@ -22,56 +22,61 @@
     }
   </style>
 
-  <title>Erik Mattheis | Saint Paul, MN | Web Developer</title>
+  <title>Erik Mattheis | Web Developer | Saint Paul, MN</title>
 </head>
 
 <body>
   <div class="page">
     <div class="card">
-      <h1 class="header animated dur04 blurred">ERIK MATTHEIS</h1>
-      <p class="header animated dur04 blurred left">
+      <h1 class="slide header animated dur04 blurred">ERIK MATTHEIS</h1>
+      <p class="slide header animated dur04 blurred left">
         <em>Full stack developer</em>
       </p>
-      <ul class="tabs header animated dur06 blurred">
+      <ul class="slide tabs header animated dur06 blurred">
         <li id="button-approach" class="button button-approach active"><a href>Approach</a></li>
         <li id="button-tools" class="button button-tools"><a href>Tools</a></li>
         <li id="button-work" class="button button-work"><a href>Work</a></li>
       </ul>
       <div class="subject-wrapper">
-        <div id="approach" class="z1 subject approach">
+        <div id="approach" class="z1 subject approach active">
           <div class="topic">
-            <div class="graphic">
+            <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
                 fill="#DDE6E8">
                 <path
                   d="M20.97 7.27a.996.996 0 000-1.41l-2.83-2.83a.996.996 0 00-1.41 0l-4.49 4.49-3.89-3.89c-.78-.78-2.05-.78-2.83 0l-1.9 1.9c-.78.78-.78 2.05 0 2.83l3.89 3.89L3 16.76V21h4.24l4.52-4.52 3.89 3.89c.95.95 2.23.6 2.83 0l1.9-1.9c.78-.78.78-2.05 0-2.83l-3.89-3.89 4.48-4.48zM5.04 6.94l1.89-1.9L8.2 6.31 7.02 7.5l1.41 1.41 1.19-1.19 1.2 1.2-1.9 1.9-3.88-3.88zm11.23 7.44l-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27-1.9 1.9-3.89-3.89 1.9-1.9 1.21 1.21zM6.41 19H5v-1.41l9.61-9.61 1.3 1.3.11.11L6.41 19zm9.61-12.44l1.41-1.41 1.41 1.41-1.41 1.41-1.41-1.41z">
                 </path>
               </svg>
-              <h2 class="title header animated blurred dur08">Approach</h2>
+              <h2 class="slide title header animated blurred dur08">Approach</h2>
             </div>
 
             <div class="copy">
-              <p>Turning a challenge into something beautiful and functional excites me.</p>
+              <p class="slide">Turning a challenge into something beautiful and functional excites me.</p>
 
-              <p>In the 90s, a web developer handled everything except running the server. If we could manage
+              <p class="slide">In the 90s, a web developer handled everything except running the server. If we could
+                manage
                 shared hosting, we were deemed webmasters.</p>
 
-              <p>Now still, a full-stack developer oversees all aspects except server management. I've acquired
+              <p class="slide">Now still, a full-stack developer oversees all aspects except server management. I've
+                acquired
                 proficiency in DevOps, making me a contemporary Web Master.</p>
 
-              <p>My journey has seen me play diverse roles, including that of a Scrum Master. However, my true passion
+              <p class="slide">My journey has seen me play diverse roles, including that of a Scrum Master. However, my
+                true passion
                 lies in contributing to a small, dynamic team that transforms ideas into live productions.</p>
 
-              <p>While my coding pace is deliberate, I excel in swift troubleshooting and consistently deliver
+              <p class="slide">While my coding pace is deliberate, I excel in swift troubleshooting and consistently
+                deliver
                 solid results that prove highly effective.</p>
 
-              <p>Explore this portfolio showcasing recent solo projects. As we approach Spring 2024, I am actively
+              <p class="slide">Explore this portfolio showcasing recent solo projects. As we approach Spring 2024, I am
+                actively
                 seeking opportunities to join a team or serve a new client.</p>
 
             </div>
 
             <div class="topic">
-              <div class="graphic">
+              <div class="slide graphic">
                 <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1"
                   viewBox="0 0 706.1 706.1" fill="#DDE6E8">
@@ -89,7 +94,7 @@
 
         <div id="tools" class="z2 subject tools">
           <div class="topic">
-            <div class="graphic">
+            <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
                 <path
                   d="M429.76 130.07L274.33 36.85a37 37 0 00-36.65 0L82.24 130.06A38.2 38.2 0 0064 162.83V349a38.26 38.26 0 0018.24 32.8L123 406.14l.23.13c20.58 10.53 28.46 10.53 37.59 10.53 32.14 0 52.11-20.8 52.11-54.29V182a8.51 8.51 0 00-8.42-8.58h-22.38a8.51 8.51 0 00-8.42 8.58v180.51a15 15 0 01-6.85 13.07c-5.9 3.6-14.47 2.84-24.14-2.15l-39.06-23.51a1.1 1.1 0 01-.48-.92V165.46a1.32 1.32 0 01.59-1.06l151.84-93a.82.82 0 01.73 0l151.93 93a1.34 1.34 0 01.55 1.1V349a1.28 1.28 0 01-.45 1l-152.06 90.65a1.22 1.22 0 01-.8 0l-38.83-23.06a7.8 7.8 0 00-7.83-.41l-.34.2c-10.72 6.35-13.6 8-23.54 11.62-1.62.59-5.43 2-5.76 5.77s3.29 6.45 6.51 8.32l51.9 31.87a35.67 35.67 0 0018.3 5.07h.58a35.87 35.87 0 0017.83-5.07l155.43-93.13A38.37 38.37 0 00448 349V162.83a38.21 38.21 0 00-18.24-32.76z">
@@ -101,79 +106,79 @@
               <h2 class="title">Tools</h2>
             </div>
             <div class="copy">
-              <p>Let's leverage the power of Artificial Intelligence and employ cutting-edge
+              <p class="slide">Let's leverage the power of Artificial Intelligence and employ cutting-edge
                 technologies and tools to enhance and simplify projects. In these projects I use:</p>
 
               <ul>
                 <li>Frontend
                   <ul>
-                    <li>ES2021</li>
-                    <li>Vue</li>
-                    <li>BootstrapJS, BootstrapVue</li>
-                    <li>HTML5, CSS3</li>
-                    <li>Liquid</li>
+                    <li class="slide">ES2021</li>
+                    <li class="slide">Vue</li>
+                    <li class="slide">BootstrapJS, BootstrapVue</li>
+                    <li class="slide">HTML5, CSS3</li>
+                    <li class="slide">Liquid</li>
                     <li class="dim">jQuery</li>
                     <li class="dim">AngularJS</li>
                   </ul>
                 </li>
                 <li>Backend
                   <ul>
-                    <li>Node</li>
-                    <li>NoSQL</li>
-                    <li>Nuxt</li>
-                    <li>SQL</li>
+                    <li class="slide">Node</li>
+                    <li class="slide">NoSQL</li>
+                    <li class="slide">Nuxt</li>
+                    <li class="slide">SQL</li>
                     <li class="dim">PHP/MySQL/Apache</li>
                     <li class="dim">Wordpress</li>
                   </ul>
                 </li>
                 <li>APIs
                   <ul>
-                    <li>Firebase</li>
-                    <li>Atlas</li>
-                    <li>OpenAI API</li>
-                    <li>Google Identity Services</li>
-                    <li>Google Ads API</li>
-                    <li>YouTube API</li>
-                    <li>Google Maps API</li>
-                    <li>Google Analytics API</li>
-                    <li>Google Books API</li>
-                    <li>Google Calendar API</li>
-                    <li>Google Drive API</li>
-                    <li>Google Sheets API</li>
-                    <li>Facebook</li>
-                    <li>MailChimp</li>
-                    <li>Print-on-demand</li>
-                    <li>REST</li>
-                    <li>Shopify Admin API</li>
-                    <li>Winston</li>
-                    <li>Passport</li>
-                    <li>Twitter API (X API v2)</li>
+                    <li class="slide">Firebase</li>
+                    <li class="slide">Atlas</li>
+                    <li class="slide">OpenAI API</li>
+                    <li class="slide">Google Identity Services</li>
+                    <li class="slide">Google Ads API</li>
+                    <li class="slide">YouTube API</li>
+                    <li class="slide">Google Maps API</li>
+                    <li class="slide">Google Analytics API</li>
+                    <li class="slide">Google Books API</li>
+                    <li class="slide">Google Calendar API</li>
+                    <li class="slide">Google Drive API</li>
+                    <li class="slide">Google Sheets API</li>
+                    <li class="slide">Facebook</li>
+                    <li class="slide">MailChimp</li>
+                    <li class="slide">Print-on-demand</li>
+                    <li class="slide">REST</li>
+                    <li class="slide">Shopify Admin API</li>
+                    <li class="slide">Winston</li>
+                    <li class="slide">Passport</li>
+                    <li class="slide">Twitter API (X API v2)</li>
                   </ul>
                 </li>
                 <li>AI
                   <ul>
-                    <li>OpenAI GPT</li>
-                    <li>OpenAI Dall-e</li>
-                    <li>Google Bard API</li>
-                    <li>Tesseract</li>
+                    <li class="slide">OpenAI GPT</li>
+                    <li class="slide">OpenAI Dall-e</li>
+                    <li class="slide">Google Bard API</li>
+                    <li class="slide">Tesseract</li>
                   </ul>
                 </li>
                 <li>DevOps
                   <ul>
-                    <li>Heroku</li>
-                    <li>Netlify</li>
-                    <li>Google Cloud</li>
-                    <li>AWS</li>
+                    <li class="slide">Heroku</li>
+                    <li class="slide">Netlify</li>
+                    <li class="slide">Google Cloud</li>
+                    <li class="slide">AWS</li>
                   </ul>
                 </li>
                 <li>Software<ul>
-                    <li>Photoshop/Illustrator</li>
-                    <li>VS Code</li>
-                    <li>Git</li>
-                    <li>Terminal</li>
-                    <li>Compass</li>
-                    <li>Postman</li>
-                    <li>Chrome Dev Tools</li>
+                    <li class="slide">Photoshop/Illustrator</li>
+                    <li class="slide">VS Code</li>
+                    <li class="slide">Git</li>
+                    <li class="slide">Terminal</li>
+                    <li class="slide">Compass</li>
+                    <li class="slide">Postman</li>
+                    <li class="slide">Chrome Dev Tools</li>
                   </ul>
                 </li>
               </ul>
@@ -183,7 +188,7 @@
 
         <div id="work" class="z3 subject work">
           <div class="topic">
-            <div class="graphic">
+            <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
                 <path d=" M22.282 9.821a5.985 5.985 0 00-.516-4.91 6.046 6.046 0 00-6.51-2.9A6.065 6.065
                 0 004.981 4.18a5.985 5.985 0 00-3.998 2.9 6.046 6.046 0 00.743 7.097 5.98 5.98 0 00.51 4.911 6.051 6.051
@@ -199,23 +204,25 @@
                 4.5 0 017.375-3.453l-.142.08-4.778 2.758a.795.795 0 00-.393.681zm1.097-2.365l2.602-1.5 2.607
                 1.5v2.999l-2.597 1.5-2.607-1.5z"></path>
               </svg>
-              <h2 class="title">Work</h2>
+              <h2 class="slide title">Work</h2>
             </div>
             <div class="topic">
-              <div class="section graphic">
+              <div class="slide section graphic">
                 <a href="https://articl.net/">
                   <img class="screenshot"
                     src="https://storage.cloud.google.com/mattheis-images/images/screenshots/articl.net.jpg"
                     alt="Articl.net" />
-                  <p class="title">Articl.net</p>
+                  <p class="slide title">Articl.net</p>
                 </a>
               </div>
               <div class="copy">
-                <p>A repository of radiological research and educational materials with a custom CMS and document
+                <p class="slide">A repository of radiological research and educational materials with a custom CMS and
+                  document
                   scraper.</p>
 
-                <p>Originally a WordPress blog, I took on the project to transform it into an <a class="text-link"
-                    href="https://articl.net/">AngularJS application</a> leveraging the WordPress REST API. In the later
+                <p class="slide">Originally a WordPress blog, I took on the project to transform it into an <a
+                    class="text-link" href="https://articl.net/">AngularJS application</a> leveraging the WordPress REST
+                  API. In the later
                   months
                   of Winter 2024, we are incorporating additional features and transitioned it to Vue and Nuxt,
                   supported by
@@ -229,21 +236,27 @@
               </div>
             </div>
             <div class="topic">
-              <div class="section graphic">
-                <a href="https://thenightly.com/">
+              <div class="slide section graphic">
+                <a href="https://naturallyhued.com/">
                   <img class="screenshot"
                     src="https://storage.cloud.google.com/mattheis-images/images/screenshots/naturally-hued.jpg"
                     alt="Naturally Hued" />
-                  <p class="title">Naturally Hued</p>
+                  <p class="slide title">Naturally Hued</p>
                 </a>
               </div>
               <div class="copy">
-                <p>A self-assigned project I used to hone my AI and design skills. I made AI make the site.</p>
+                <p class="slide">A self-assigned project I used to hone my AI and design skills. I made AI make the
+                  site.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <footer class="header animated dur06 blurred" style="z-index:2">
+        <p class="slide">Let's build something great togther.</p>
+        <a class="slide mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
+        <div class="slide">Saint Paul, MN</div>
+      </footer>
     </div>
   </div>
 
