--- a/app/index.html
+++ b/app/index.html
@@ -28,17 +28,21 @@
 <body>
   <div class="page">
     <div class="card">
+
       <h1 class="slide header animated dur04 blurred">ERIK MATTHEIS</h1>
+
       <p class="slide header animated dur04 blurred left">
         <em>Full stack developer</em>
       </p>
-      <ul class="slide tabs header animated dur06 blurred">
-        <li id="button-approach" class="button button-approach active"><a href>Approach</a></li>
+
+      <ul class="slide z4 tabs header animated dur06 blurred">
+        <li id="button-approach" class="button button-approach"><a href>Approach</a></li>
         <li id="button-tools" class="button button-tools"><a href>Tools</a></li>
         <li id="button-work" class="button button-work"><a href>Work</a></li>
       </ul>
+
       <div class="subject-wrapper">
-        <div id="approach" class="z1 subject approach active">
+        <div id="approach" class="z3 subject approach">
           <div class="topic">
             <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
@@ -186,7 +190,7 @@
           </div>
         </div>
 
-        <div id="work" class="z3 subject work">
+        <div id="work" class="z1 subject work">
           <div class="topic">
             <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
