--- a/app/index.html
+++ b/app/index.html
@@ -202,25 +202,21 @@
                   <img class="screenshot"
                     src="https://storage.cloud.google.com/mattheis-images/images/screenshots/articl.net.jpg"
                     alt="Articl.net" />
-                  <p class="slide title">Articl.net</p>
+                  <h3 class="slide title">Articl.net</h3>
                 </a>
               </div>
               <div class="copy">
                 <p class="slide">A repository of radiological research and educational materials with a custom CMS and
-                  document
-                  scraper.</p>
+                  document scraper.</p>
 
                 <p class="slide">Originally a WordPress blog, I took on the project to transform it into an <a
                     class="text-link" href="https://articl.net/">AngularJS application</a> leveraging the WordPress REST
-                  API. In the later
-                  months
-                  of Winter 2024, we are incorporating additional features and transitioned it to Vue and Nuxt,
-                  supported by
-                  a custom API implemented in Node/Express/MongoDB. You can find the respective repositories for the
+                  API. In winter and spring 2024, we are incorporating additional features and transitioned it to Vue,
+                  supported by a custom API implemented in Node/Express/MongoDB. You can find the respective
+                  repositories for the
                   <a class="text-link" href="https://github.com/erikmattheis/articl-2023-vue">frontend</a> / <a
                     class="text-link" href="https://github.com/erikmattheis/articl-2023-node">backend</a>, mail me</a>
-                  and for
-                  access to the development site link, please contact me <a class="text-link"
+                  and foraccess to the development site link, please contact me <a class="text-link"
                     href="mailto:erik@mattheis.org">via email</a>.
                 </p>
               </div>
@@ -231,12 +227,13 @@
                   <img class="screenshot"
                     src="https://storage.cloud.google.com/mattheis-images/images/screenshots/naturally-hued.jpg"
                     alt="Naturally Hued" />
-                  <p class="slide title">Naturally Hued</p>
+                  <h3 class="slide title">Natrally Hued</h3>
                 </a>
               </div>
               <div class="copy">
-                <p class="slide">A self-assigned project I used to hone my AI and design skills. I made AI make the
-                  site.</p>
+                <p class="slide">As part of a self-directed initiative, I undertook a project aimed at refining my AI
+                  and design proficiencies. The content is created by GPT3.5 and Dall-e 2. Administrators can directly
+                  edit the content and direct the AI in making revisions.</p>
               </div>
             </div>
           </div>
