--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
       <h1 class="slide2 header animated dur04 blurred2">ERIK MATTHEIS</h1>
 
-      <p class="slide2 header animated dur04 blurred2 left">
+      <p class="slide2 header animated dur04 blurred2 left2">
         <em>Full stack developer</em>
       </p>
 
