--- a/app/index.html
+++ b/app/index.html
@@ -217,7 +217,7 @@
               <div class="slide2 section graphic">
                 <a href="https://articl.net/">
                   <img class="screenshot"
-                    src="https://storage.cloud.google.com/mattheis-images/images/screenshots/articl.net.jpg"
+                    src="https://storage.googleapis.com/mattheis-images/images/screenshots/articl.net.jpg"
                     alt="Articl.net" />
                   <h3 class="slide2 title">Articl.net</h3>
                 </a>
@@ -242,7 +242,7 @@
               <div class="slide2 section graphic">
                 <a href="https://naturallyhued.com/">
                   <img class="screenshot"
-                    src="https://storage.cloud.google.com/mattheis-images/images/screenshots/naturally-hued.jpg"
+                    src="https://storage.googleapis.com/mattheis-images/images/screenshots/naturally-hued.jpg"
                     alt="Naturally Hued" />
                   <h3 class="slide2 title">Natrally Hued</h3>
                 </a>
