--- a/app/index.html
+++ b/app/index.html
@@ -280,11 +280,13 @@
 
   <script type="module" src="/main.js"></script>
 
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEP8V7LPC9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
-    gtag('approach', new Date());
+    gtag('js', new Date());
+
     gtag('config', 'G-ZEP8V7LPC9');
   </script>
 
